--- a/loan24/index.html
+++ b/loan24/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TOP VIDEOS</title>
     <link rel="stylesheet" href="./style/main.css">
-
+ <base href="/loan24/">
      <style>
         @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&amp;display=swap');
 
@@ -814,7 +814,7 @@
         <div id="div-gpt-ad-1" style="min-width:300px; min-height:250px !important;"></div>
 
         <div class="video-row">
-            <a href="./page/play9.html" class="video-column text-white">
+            <a href="page/play9.html" class="video-column text-white">
                 <div class="video-wrapper">
                     <video class="video-bg" autoplay muted loop playsinline>
                         <source src="img/9.mp4" type="video/mp4">
@@ -825,7 +825,7 @@
                 </div>
             </a>
 
-            <a href="./page/play2.html" class="video-column text-white">
+            <a href="page/play2.html" class="video-column text-white">
                 <div class="video-wrapper">
                     <video class="video-bg" autoplay muted loop playsinline>
                         <source src="img/6.mp4" type="video/mp4">
@@ -835,7 +835,7 @@
                     <div class="play-now-btn">Watch</div>
                 </div>
             </a>
-            <a href="./page/play3.html" class="video-column text-white">
+            <a href="page/play3.html" class="video-column text-white">
                 <div class="video-wrapper">
                     <video class="video-bg" autoplay muted loop playsinline>
                         <source src="img/3.mp4" type="video/mp4">
@@ -859,7 +859,7 @@
 
 
         <div class="video-row">
-            <a href="./page/play4.html" class="video-column text-white">
+            <a href="page/play4.html" class="video-column text-white">
                 <div class="video-wrapper">
                     <video class="video-bg" autoplay muted loop playsinline>
                         <source src="img/1.mp4" type="video/mp4">
@@ -869,7 +869,7 @@
                     <div class="play-now-btn">Watch</div>
                 </div>
             </a>
-            <a href="./page/play5.html" class="video-column text-white">
+            <a href="page/play5.html" class="video-column text-white">
                 <div class="video-wrapper">
                     <video class="video-bg" autoplay muted loop playsinline>
                         <source src="img/7.mp4" type="video/mp4">
@@ -879,7 +879,7 @@
                     <div class="play-now-btn">Watch</div>
                 </div>
             </a>
-            <a href="./page/play6.html" class="video-column text-white">
+            <a href="page/play6.html" class="video-column text-white">
                 <div class="video-wrapper">
                     <video class="video-bg" autoplay muted loop playsinline>
                         <source src="img/2.mp4" type="video/mp4">
@@ -899,7 +899,7 @@
 
 
         <div class="video-row">
-            <a href="./page/play1.html" class="video-column text-white">
+            <a href="page/play1.html" class="video-column text-white">
                 <div class="video-wrapper">
                     <video class="video-bg" autoplay muted loop playsinline>
                         <source src="img/8.mp4" type="video/mp4">
@@ -909,7 +909,7 @@
                     <div class="play-now-btn">Watch</div>
                 </div>
             </a>
-            <a href="./page/play10.html" class="video-column text-white">
+            <a href="page/play10.html" class="video-column text-white">
                 <div class="video-wrapper">
                     <video class="video-bg" autoplay muted loop playsinline>
                         <source src="img/10.mp4" type="video/mp4">
@@ -919,7 +919,7 @@
                     <div class="play-now-btn">Watch</div>
                 </div>
             </a>
-            <a href="./page/play11.html" class="video-column text-white">
+            <a href="page/play11.html" class="video-column text-white">
                 <div class="video-wrapper">
                     <video class="video-bg" autoplay muted loop playsinline>
                         <source src="img/11.mp4" type="video/mp4">
